# livetype

./: .gitignore  LICENSE  README.md  pyproject.toml
src/livetype/: __init__.py  cli.py  config.py  engine.py
src/livetype/strategies/: __init__.py  base.py  clike.py  python.py
tests/: test_state_machine.py
