[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livetype"
version = "0.1.0"
description = "Live-type code into any editor for screencasts, demos, and teaching videos. Multi-language, IDE auto-close aware."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LiveType" }]
keywords = ["typing", "screencast", "demo", "autotype", "pyautogui", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=7", "build", "twine"]

[project.scripts]
livetype = "livetype.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/livetype"]
